--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <nav class="menu" id="primary-navigation" aria-label="Primary">
     <div class="container nav-inner">
-      <a href="/">Home</a>
+      <a href="/" class="active">Home</a>
       <a href="/listings">Listings</a>
       <a href="/pricing">Plans</a>
       <a href="/legal">Legal</a>
