--- a/pricing/index.html
+++ b/pricing/index.html
@@ -81,6 +81,8 @@
           <div class="hr"></div>
 
           <button class="btn btn-primary select-btn" type="button">Select Plan</button>
+          <div class="hr"></div>
+<p class="small muted pricing-footnote">Fees are for listing visibility only. No deal guarantee.</p>
         </div>
       </article>
 
@@ -111,7 +113,7 @@
           <button class="btn btn-primary select-btn" type="button">Select Plan</button>
 
           <div class="hr"></div>
-          <p class="small muted">Fees are for listing visibility only. No deal guarantee.</p>
+          <p class="small muted pricing-footnote">Fees are for listing visibility only. No deal guarantee.</p>
         </div>
       </article>
 
@@ -140,7 +142,7 @@
           <button class="btn btn-primary select-btn" type="button">Select Plan</button>
 
           <div class="hr"></div>
-          <p class="small muted">Fees are for listing visibility only. No deal guarantee.</p>
+          <p class="small muted pricing-footnote">Fees are for listing visibility only. No deal guarantee.</p>
         </div>
       </article>
 
