--- a/pricing/index.html
+++ b/pricing/index.html
@@ -11,26 +11,30 @@
 <body>
 
   <header class="site-header">
-    <div class="container">
-      <div class="navbar">
-        <a class="brand" href="../index.html">
-          <img class="brand-logo" src="../assets/arh-logo.png" alt="ARH Logo" />
-          <div class="brand-title">
-            <strong>Anjani Real Heights</strong>
-            <span>Trusted Property Consultants</span>
-          </div>
-        </a>
+  <div class="container">
+    <div class="navbar">
+      <a class="brand" href="../index.html">
+        <img class="brand-logo" src="../assets/arh-logo.png" alt="ARH Logo" />
+        <div class="brand-title">
+          <strong>Anjani Real Heights</strong>
+          <span>Property Consultants</span>
+        </div>
+      </a>
 
-        <nav class="menu">
-          <a href="../index.html">Home</a>
-          <a href="./index.html">Pricing</a>
-          <a href="../contact.html">Contact</a>
-        </nav>
-
-        <a class="btn btn-primary" href="../contact.html">Get Quote</a>
+      <div class="header-actions">
+        <a class="btn btn-primary header-cta" href="../contact.html">Get Quote</a>
       </div>
     </div>
-  </header>
+  </div>
+
+  <nav class="menu" aria-label="Primary">
+    <div class="container nav-inner">
+      <a href="../index.html">Home</a>
+      <a href="./index.html">Pricing</a>
+      <a href="../contact.html">Contact</a>
+    </div>
+  </nav>
+</header>
 
   <main class="container">
     <section class="hero">
