--- a/pricing/index.html
+++ b/pricing/index.html
@@ -16,9 +16,9 @@
       <a class="brand" href="../index.html">
         <img class="brand-logo" src="../assets/arh-logo.png" alt="ARH Logo" />
         <div class="brand-title">
-          <strong>Anjani Real Heights</strong>
-          <span>Property Consultants</span>
-        </div>
+  <strong>ARH Rentals</strong>
+  <span>by Anjani Real Heights</span>
+</div>
       </a>
 
       <div class="header-actions">
