--- a/property.html
+++ b/property.html
@@ -11,11 +11,13 @@
 <header class="nav">
   <div class="container nav-inner">
     <a class="brand" href="index.html">
-      <div class="logo"></div>
-      <div>
-        <h1>ARH Rentals <small>by Anjani Real Heights</small></h1>
-      </div>
-    </a>
+  <div class="logo"></div>
+
+  <div class="brand-title">
+    <strong>ARH Rentals</strong>
+    <span>by Anjani Real Heights</span>
+  </div>
+</a>
     <nav class="menu">
       <a href="listings.html">Rentals</a>
       <a href="pricing.html">Pricing</a>
