--- a/contact-us.html
+++ b/contact-us.html
@@ -41,6 +41,33 @@
   </style>
 </head>
 <body>
+  <!-- ============ GLOBAL HEADER (ARH RENTALS BRANDING) ============ -->
+<header class="site-header">
+  <div class="container">
+    <div class="navbar">
+      <a class="brand" href="index.html">
+        <img class="brand-logo" src="assets/arh-logo.png" alt="ARH Logo" />
+        <div class="brand-title">
+          <strong>ARH Rentals</strong>
+          <span>by Anjani Real Heights</span>
+        </div>
+      </a>
+
+      <div class="header-actions">
+        <a class="btn btn-primary header-cta" href="contact-us.html">Get Quote</a>
+      </div>
+    </div>
+  </div>
+
+  <nav class="menu" aria-label="Primary">
+    <div class="container nav-inner">
+      <a href="index.html">Home</a>
+      <a href="pricing/index.html">Pricing</a>
+      <a href="contact-us.html">Contact</a>
+    </div>
+  </nav>
+</header>
+
 
   <div class="container">
     <h1>Contact Us</h1>
