--- a/pricing/index.html
+++ b/pricing/index.html
@@ -154,10 +154,11 @@
   </main>
 
   <footer class="footer">
-    <div class="container">
-      © <span id="year"></span> Anjani Real Heights • <a href="../contact.html">Contact</a>
-    </div>
-  </footer>
+  <div class="container">
+    © <span id="year"></span> ARH Rentals • <a href="../legal/index.html">Legal</a> • <a href="../contact.html">Contact</a>
+  </div>
+</footer>
+
 
   <script src="../assets/app.js"></script>
 
