--- a/pricing/index.html
+++ b/pricing/index.html
@@ -155,9 +155,20 @@
 
   <footer class="footer">
   <div class="container">
-    © <span id="year"></span> ARH Rentals • <a href="../legal/index.html">Legal</a> • <a href="../contact.html">Contact</a>
+    <div>
+      © <span id="year"></span> ARH Rentals •
+      <a href="../legal/index.html">Legal</a> •
+      <a href="../contact.html">Contact</a>
+    </div>
+
+    <div class="footer-disclaimer">
+      Disclaimer: ARH Rentals is an information-access platform only. We do not guarantee
+      leads, tenants, responses, or deal closure. Users must independently verify all details
+      before any transaction.
+    </div>
   </div>
 </footer>
+
 
 
   <script src="../assets/app.js"></script>
