--- a/index.html
+++ b/index.html
@@ -199,11 +199,21 @@
   </main>
 
   <footer class="footer">
-  © 2025 ARH Rentals • <a href="/legal">Legal</a> • <a href="/pricing">Plans</a>
-  <div style="margin-top:8px">
-    Disclaimer: We do not guarantee or assure 100% lead generation. ARH Rentals is an information-access platform only and is not responsible for any deal/transaction.
+  <div class="container">
+    <div>
+      © <span id="year"></span> ARH Rentals •
+      <a href="legal.html">Legal</a> •
+      <a href="pricing.html">Plans</a>
+    </div>
+
+    <div class="footer-disclaimer">
+      Disclaimer: ARH Rentals is an information-access platform only. We do not guarantee
+      leads, tenants, responses, or deal closure. Users must independently verify all details
+      before any transaction.
+    </div>
   </div>
 </footer>
+
 
 
 <script src="/assets/app.js"></script>
