--- a/contact-us.html
+++ b/contact-us.html
@@ -97,12 +97,22 @@
       SSB 318–319, Pocket-A, Sector-14, Hisar, Haryana, India
     </div>
 
-    <footer>
-      <p>
-        For any queries related to property services, rentals, listings, or SMS/OTP communication,
-        please reach out to us using the contact details mentioned above.
-      </p>
-    </footer>
+    <footer class="footer">
+  <div class="container">
+    <div>
+      © <span id="year"></span> ARH Rentals •
+      <a href="legal.html">Legal</a> •
+      <a href="pricing.html">Plans</a>
+    </div>
+
+    <div class="footer-disclaimer">
+      Disclaimer: ARH Rentals is an information-access platform only. We do not guarantee
+      leads, tenants, responses, or deal closure. Users must independently verify all details
+      before any transaction.
+    </div>
+  </div>
+</footer>
+
   </div>
 
 </body>
