--- a/property.html
+++ b/property.html
@@ -74,8 +74,21 @@
   </div>
 
   <footer class="footer">
-    © ARH Rentals • <a href="legal.html">Legal</a>
-  </footer>
+  <div class="container">
+    <div>
+      © <span id="year"></span> ARH Rentals •
+      <a href="legal.html">Legal</a> •
+      <a href="pricing.html">Plans</a>
+    </div>
+
+    <div class="footer-disclaimer">
+      Disclaimer: ARH Rentals is an information-access platform only. We do not guarantee
+      leads, tenants, responses, or deal closure. Users must independently verify all details
+      before any transaction.
+    </div>
+  </div>
+</footer>
+
 </main>
 
 <script src="assets/app.js"></script>
