--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="/assets/styles.css"/>
   <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdYFTssAAAAAGqObwYCNTt7WFoLWkdJhomR6geu"></script>
 </head>
-<body>
+<body class="home">
 
 <header class="site-header">
   <div class="container navbar">
