--- a/pricing/index.html
+++ b/pricing/index.html
@@ -4,61 +4,70 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Post Rental Property in Hisar | ARH Rentals Pricing</title>
-<meta name="description" content="Choose the right plan to post your rental property in Hisar. 1 plan = 1 property listing. Transparent pricing by Anjani Real Heights." />
-<link rel="canonical" href="https://www.anjanirealheights.com/pricing/" />
+  <meta name="description" content="Choose the right plan to post your rental property in Hisar. 1 plan = 1 property listing. Transparent pricing by Anjani Real Heights." />
+  <link rel="canonical" href="https://www.anjanirealheights.com/pricing/" />
   <link rel="stylesheet" href="../assets/styles.css" />
 </head>
 <body>
 
   <header class="site-header">
-  <div class="container">
-    <div class="navbar">
-      <a class="brand" href="../index.html">
-        <img class="brand-logo" src="../assets/arh-logo.png" alt="ARH Logo" />
-        <div class="brand-title">
-  <strong>ARH Rentals</strong>
-  <span>by Anjani Real Heights</span>
-</div>
-      </a>
+    <div class="container">
+      <div class="navbar">
 
-      <div class="header-actions">
-        <a class="btn btn-primary header-cta" href="../contact.html">Get Quote</a>
+        <!-- BRAND (as it is) -->
+        <a class="brand" href="../index.html">
+          <img class="brand-logo" src="../assets/arh-logo.png" alt="ARH Logo" />
+          <div class="brand-title">
+            <strong>ARH Rentals</strong>
+            <span>by Anjani Real Heights</span>
+          </div>
+        </a>
+
+        <!-- 👇 YAHAN PASTE KARNA HAI (JUST AFTER BRAND) -->
+        <button class="nav-toggle" type="button" aria-label="Open menu" aria-expanded="false">
+          <span class="nav-toggle-icon" aria-hidden="true"></span>
+        </button>
+
+        <!-- HEADER ACTIONS (as it is) -->
+        <div class="header-actions">
+          <a class="btn btn-primary header-cta" href="../contact.html">Get Quote</a>
+        </div>
+
       </div>
     </div>
-  </div>
 
-  <nav class="menu" aria-label="Primary">
-    <div class="container nav-inner">
-      <a href="../index.html">Home</a>
-      <a href="./index.html">Pricing</a>
-      <a href="../contact.html">Contact</a>
-    </div>
-  </nav>
-</header>
+    <nav class="menu" id="primary-navigation" aria-label="Primary">
+      <div class="container nav-inner">
+        <a href="../index.html">Home</a>
+        <a href="./index.html">Pricing</a>
+        <a href="../contact.html">Contact</a>
+      </div>
+    </nav>
+  </header>
 
   <main class="container">
     <section class="hero">
-  <h1>Post Your Rental Property in Hisar</h1>
+      <h1>Post Your Rental Property in Hisar</h1>
 
-  <p class="sub">
-    List your rental property with <strong>ARH Rentals</strong> by
-    <strong>Anjani Real Heights</strong>. Clear pricing, no confusion,
-    and local reach across Hisar.
-  </p>
+      <p class="sub">
+        List your rental property with <strong>ARH Rentals</strong> by
+        <strong>Anjani Real Heights</strong>. Clear pricing, no confusion,
+        and local reach across Hisar.
+      </p>
 
-  <div class="trust-strip">
-    <span>✔ Since 1989</span>
-    <span>✔ Hisar Local Experts</span>
-    <span>✔ No Unlimited Listings</span>
-    <span>✔ One Plan = One Property</span>
-  </div>
+      <div class="trust-strip">
+        <span>✔ Since 1989</span>
+        <span>✔ Hisar Local Experts</span>
+        <span>✔ No Unlimited Listings</span>
+        <span>✔ One Plan = One Property</span>
+      </div>
 
-  <div class="notice">
-    <strong>Important:</strong> Each pricing plan allows you to post
-    <u>only one rental property</u>.
-    For multiple properties, purchase a separate plan for each listing.
-  </div>
-</section>
+      <div class="notice">
+        <strong>Important:</strong> Each pricing plan allows you to post
+        <u>only one rental property</u>.
+        For multiple properties, purchase a separate plan for each listing.
+      </div>
+    </section>
 
     <section class="grid-3" id="pricingGrid">
 
@@ -86,7 +95,7 @@
 
           <button class="btn btn-primary select-btn" type="button">Select Plan</button>
           <div class="hr"></div>
-<p class="small muted pricing-footnote">Fees are for listing visibility only. No deal guarantee.</p>
+          <p class="small muted pricing-footnote">Fees are for listing visibility only. No deal guarantee.</p>
         </div>
       </article>
 
@@ -153,22 +162,20 @@
   </main>
 
   <footer class="footer">
-  <div class="container">
-    <div>
-      © <span id="year"></span> ARH Rentals •
-      <a href="../legal/index.html">Legal</a> •
-      <a href="../contact.html">Contact</a>
+    <div class="container">
+      <div>
+        © <span id="year"></span> ARH Rentals •
+        <a href="../legal/index.html">Legal</a> •
+        <a href="../contact.html">Contact</a>
+      </div>
+
+      <div class="footer-disclaimer">
+        Disclaimer: ARH Rentals is an information-access platform only. We do not guarantee
+        leads, tenants, responses, or deal closure. Users must independently verify all details
+        before any transaction.
+      </div>
     </div>
-
-    <div class="footer-disclaimer">
-      Disclaimer: ARH Rentals is an information-access platform only. We do not guarantee
-      leads, tenants, responses, or deal closure. Users must independently verify all details
-      before any transaction.
-    </div>
-  </div>
-</footer>
-
-
+  </footer>
 
   <script src="../assets/app.js"></script>
 
