--- a/pricing/index.html
+++ b/pricing/index.html
@@ -37,12 +37,14 @@
     </div>
 
     <nav class="menu" id="primary-navigation" aria-label="Primary">
-      <div class="container nav-inner">
-        <a href="../index.html">Home</a>
-        <a href="./index.html">Pricing</a>
-        <a href="../contact.html">Contact</a>
-      </div>
-    </nav>
+  <div class="container">
+    <div class="nav-inner">
+      <a href="../index.html">Home</a>
+      <a class="active" href="./index.html">Pricing</a>
+      <a href="../contact.html">Contact</a>
+    </div>
+  </div>
+</nav>
   </header>
 
   <main class="container">
