--- a/pricing/index.html
+++ b/pricing/index.html
@@ -233,6 +233,7 @@
       window.addEventListener("pageshow", initPricingSelection, { once: true });
     })();
   </script>
+  <script src="../assets/nav-override.js"></script>
 
 </body>
 </html>
