--- a/pricing/index.html
+++ b/pricing/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Choose the right plan to post your rental property in Hisar. 1 plan = 1 property listing. Transparent pricing by Anjani Real Heights." />
   <link rel="canonical" href="https://www.anjanirealheights.com/pricing/" />
   <link rel="stylesheet" href="../assets/styles.css" />
+  <link rel="stylesheet" href="../assets/menu-fix.css" />
 </head>
 <body>
 
