--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1,3 +1,5 @@
+----------------------------
+PASTE THIS CODE:
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,7 +9,6 @@
   <meta name="description" content="Choose the right plan to post your rental property in Hisar. 1 plan = 1 property listing. Transparent pricing by Anjani Real Heights." />
   <link rel="canonical" href="https://www.anjanirealheights.com/pricing/" />
   <link rel="stylesheet" href="../assets/styles.css" />
-  <link rel="stylesheet" href="../assets/menu-fix.css" />
 </head>
 <body>
 
@@ -15,7 +16,6 @@
     <div class="container">
       <div class="navbar">
 
-        <!-- BRAND (as it is) -->
         <a class="brand" href="../index.html">
           <img class="brand-logo" src="../assets/arh-logo.png" alt="ARH Logo" />
           <div class="brand-title">
@@ -24,12 +24,10 @@
           </div>
         </a>
 
-        <!-- 👇 YAHAN PASTE KARNA HAI (JUST AFTER BRAND) -->
         <button class="nav-toggle" type="button" aria-label="Open menu" aria-expanded="false">
           <span class="nav-toggle-icon" aria-hidden="true"></span>
         </button>
 
-        <!-- HEADER ACTIONS (as it is) -->
         <div class="header-actions">
           <a class="btn btn-primary header-cta" href="../contact.html">Get Quote</a>
         </div>
@@ -38,14 +36,12 @@
     </div>
 
     <nav class="menu" id="primary-navigation" aria-label="Primary">
-  <div class="container">
-    <div class="nav-inner">
-      <a href="../index.html">Home</a>
-      <a class="active" href="./index.html">Pricing</a>
-      <a href="../contact.html">Contact</a>
-    </div>
-  </div>
-</nav>
+      <div class="container nav-inner">
+        <a href="../index.html">Home</a>
+        <a class="active" href="./index.html">Pricing</a>
+        <a href="../contact.html">Contact</a>
+      </div>
+    </nav>
   </header>
 
   <main class="container">
@@ -234,7 +230,7 @@
       window.addEventListener("pageshow", initPricingSelection, { once: true });
     })();
   </script>
-  <script src="../assets/nav-override.js"></script>
 
 </body>
 </html>
+----------------------------
