--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1,3 +1,4 @@
+PASTE THIS CODE:
 <!doctype html>
 <html lang="en">
 <head>
@@ -13,7 +14,6 @@
   <header class="site-header">
     <div class="container">
       <div class="navbar">
-
         <a class="brand" href="../index.html">
           <img class="brand-logo" src="../assets/arh-logo.png" alt="ARH Logo" />
           <div class="brand-title">
@@ -29,7 +29,6 @@
         <div class="header-actions">
           <a class="btn btn-primary header-cta" href="../contact.html">Get Quote</a>
         </div>
-
       </div>
     </div>
 
@@ -39,8 +38,6 @@
           <a href="../index.html">Home</a>
           <a class="active" href="./index.html">Pricing</a>
           <a href="../contact.html">Contact</a>
-
-          <a class="btn btn-primary menu-cta" href="../contact.html">Get Quote</a>
         </div>
       </div>
     </nav>
