--- a/pricing/index.html
+++ b/pricing/index.html
@@ -33,12 +33,10 @@ PASTE THIS CODE:
     </div>
 
     <nav class="menu" id="primary-navigation" aria-label="Primary">
-      <div class="container">
-        <div class="nav-inner">
-          <a href="../index.html">Home</a>
-          <a class="active" href="./index.html">Pricing</a>
-          <a href="../contact.html">Contact</a>
-        </div>
+      <div class="container nav-inner">
+        <a href="../index.html">Home</a>
+        <a class="active" href="./index.html">Pricing</a>
+        <a href="../contact.html">Contact</a>
       </div>
     </nav>
   </header>
