--- a/pricing/index.html
+++ b/pricing/index.html
@@ -10,7 +10,6 @@ PASTE THIS CODE:
   <link rel="stylesheet" href="../assets/styles.css" />
 </head>
 <body>
-
 <header class="site-header">
   <div class="container">
     <div class="navbar">
@@ -33,12 +32,13 @@ PASTE THIS CODE:
   </div>
 
   <nav class="menu" id="primary-navigation" aria-label="Primary">
-    <div class="container nav-inner">
-      <a href="../index.html">Home</a>
-      <a class="active" href="./index.html">Pricing</a>
-      <a href="../contact.html">Contact</a>
-    </div>
-  </nav>
+  <div class="container">
+    <div class="nav-inner">
+    <a href="../index.html">Home</a>
+    <a class="active" href="./index.html">Pricing</a>
+    <a href="../contact.html">Contact</a> </div>
+  </div>
+</nav>
 </header>
   <main class="container">
     <section class="hero">
