--- a/pricing/index.html
+++ b/pricing/index.html
@@ -31,12 +31,11 @@ PASTE THIS CODE:
     </div>
   </div>
 
-  <nav class="menu" id="primary-navigation" aria-label="Primary">
-  <div class="container">
-    <div class="nav-inner">
+<nav class="menu" id="primary-navigation" aria-label="Primary">
+  <div class="container nav-inner">
     <a href="../index.html">Home</a>
     <a class="active" href="./index.html">Pricing</a>
-    <a href="../contact.html">Contact</a> </div>
+    <a href="../contact.html">Contact</a>
   </div>
 </nav>
 </header>
