--- a/pricing/index.html
+++ b/pricing/index.html
@@ -26,18 +26,19 @@ PASTE THIS CODE:
       </button>
 
       <div class="header-actions">
-        <a class="btn btn-primary header-cta" href="../contact.html">Get Quote</a>
+        <a class="btn btn-primary header-cta" href="../contact.html">Post Property</a>
       </div>
     </div>
   </div>
 
-<nav class="menu" id="primary-navigation" aria-label="Primary">
-  <div class="container nav-inner">
-    <a href="../index.html">Home</a>
-    <a class="active" href="./index.html">Pricing</a>
-    <a href="../contact.html">Contact</a>
-  </div>
-</nav>
+  <nav class="menu" id="primary-navigation" aria-label="Primary">
+    <div class="container nav-inner">
+      <a href="../index.html">Home</a>
+      <a href="../listings/index.html">Listings</a>
+      <a class="active" href="./index.html">Plans</a>
+      <a href="../legal/index.html">Legal</a>
+    </div>
+  </nav>
 </header>
   <main class="container">
     <section class="hero">
