--- a/pricing/index.html
+++ b/pricing/index.html
@@ -32,11 +32,13 @@ PASTE THIS CODE:
   </div>
 
   <nav class="menu" id="primary-navigation" aria-label="Primary">
-  <div class="container nav-inner">
-    <a href="../index.html">Home</a>
-    <a href="../listings/index.html">Listings</a>
-    <a class="active" href="./index.html">Plans</a>
-    <a href="../legal/index.html">Legal</a>
+  <div class="container">
+    <div class="nav-inner">
+      <a href="../index.html">Home</a>
+      <a href="../listings/index.html">Listings</a>
+      <a class="active" href="./index.html">Plans</a>
+      <a href="../legal/index.html">Legal</a>
+    </div>
   </div>
 </nav>
 </header>
