--- a/pricing/index.html
+++ b/pricing/index.html
@@ -20,26 +20,31 @@
         </div>
       </a>
 
-      <button class="nav-toggle" type="button" aria-label="Open menu" aria-expanded="false">
-        <span class="nav-toggle-icon" aria-hidden="true"></span>
-      </button>
-
       <div class="header-actions">
         <a class="btn btn-primary header-cta" href="../contact.html">Post Property</a>
+
+        <button class="nav-toggle"
+                type="button"
+                aria-label="Menu"
+                aria-controls="primary-navigation"
+                aria-expanded="false">
+          <span class="nav-toggle-icon" aria-hidden="true"></span>
+        </button>
       </div>
     </div>
   </div>
 
   <nav class="menu" id="primary-navigation" aria-label="Primary">
-  <div class="container">
-    <div class="nav-inner">
-      <a href="../index.html">Home</a>
-      <a href="../listings/index.html">Listings</a>
-      <a class="active" href="./index.html">Plans</a>
-      <a href="../legal/index.html">Legal</a>
+    <div class="container">
+      <div class="nav-inner">
+        <a href="../index.html">Home</a>
+        <a href="../listings/index.html">Listings</a>
+        <a class="active" href="./index.html">Plans</a>
+        <a href="../legal/index.html">Legal</a>
+        <a class="btn btn-primary menu-cta" href="../post/index.html">Post Property</a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 </header>
   <main class="container">
     <section class="hero">
