--- a/pricing/index.html
+++ b/pricing/index.html
@@ -48,27 +48,29 @@
 </header>
   <main class="container">
     <section class="hero">
-      <h1>Post Your Rental Property in Hisar</h1>
+  <h1>Post Your Rental Property in Hisar</h1>
 
-      <p class="sub">
-        List your rental property with <strong>ARH Rentals</strong> by
-        <strong>Anjani Real Heights</strong>. Clear pricing, no confusion,
-        and local reach across Hisar.
-      </p>
+  <p class="sub">
+    Post your rental property on <strong>ARH Rentals</strong> (by
+    <strong>Anjani Real Heights</strong>).
+    ARH Rentals is an <strong>owner-posted advertisement platform</strong>.
+    Users must independently verify all details before any transaction.
+  </p>
 
-      <div class="trust-strip">
-        <span>✔ Since 1989</span>
-        <span>✔ Hisar Local Experts</span>
-        <span>✔ No Unlimited Listings</span>
-        <span>✔ One Plan = One Property</span>
-      </div>
+  <div class="trust-strip">
+    <span>✔ Since 1989</span>
+    <span>✔ Hisar-focused reach</span>
+    <span>✔ One Plan = One Property</span>
+    <span>✔ Auto-hide after expiry</span>
+  </div>
 
-      <div class="notice">
-        <strong>Important:</strong> Each pricing plan allows you to post
-        <u>only one rental property</u>.
-        For multiple properties, purchase a separate plan for each listing.
-      </div>
-    </section>
+  <div class="notice">
+    <strong>Important:</strong> Each plan allows you to post
+    <u>only one rental property</u>.
+    ARH Rentals does not act as a broker or mediator and does not guarantee
+    leads, tenants, responses, or deal closure.
+  </div>
+</section>
 
     <section class="grid-3" id="pricingGrid">
 
