--- a/pricing/index.html
+++ b/pricing/index.html
@@ -162,6 +162,12 @@
       </article>
 
     </section>
+    <section class="notice pricing-next">
+  <strong>Next step:</strong> Select a plan above, then continue to
+  <a href="../post/index.html"><u>Post Property</u></a> (PIN + OTP).
+  Your selection applies to <u>one property listing</u> only.
+</section>
+
   </main>
 
   <footer class="footer">
