--- a/pricing/index.html
+++ b/pricing/index.html
@@ -78,7 +78,7 @@
         <div class="card-body">
           <h2>Basic</h2>
           <div class="price">₹199</div>
-          <p class="muted">Best for quick tenants.</p>
+          <p class="muted">   Quick visibility for owners who want fast tenant enquiries. </p>
 
           <div class="hr"></div>
 
