--- a/pricing/index.html
+++ b/pricing/index.html
@@ -107,7 +107,7 @@
         <div class="card-body">
           <h2>Premium</h2>
           <div class="price">₹349</div>
-          <p class="muted">Best value plan.</p>
+          <p class="muted">   Balanced visibility with more time for genuine tenant responses. </p>
 
           <div class="hr"></div>
 
