--- a/legal/index.html
+++ b/legal/index.html
@@ -66,21 +66,27 @@
     </div>
   </section>
 
-  <footer class="footer">
+  <!-- PASTE THIS CODE: -->
+
+<!-- Replace ONLY the <footer class="footer"> ... </footer> block with this -->
+
+<footer class="footer">
   <div class="container">
     <div>
       © <span id="year"></span> ARH Rentals •
-      <a href="legal.html">Legal</a> •
-      <a href="pricing.html">Plans</a>
+      <a href="/legal">Legal</a> •
+      <a href="/pricing">Plans</a> •
+      <a href="/post">Post Property</a>
     </div>
 
     <div class="footer-disclaimer">
-      Disclaimer: ARH Rentals is an information-access platform only. We do not guarantee
-      leads, tenants, responses, or deal closure. Users must independently verify all details
-      before any transaction.
+      Disclaimer: ARH Rentals is an information-access platform only. Property details are posted directly by owners.
+      Users must independently verify all details before any transaction. ARH Rentals does not guarantee tenant availability
+      or deal success.
     </div>
   </div>
 </footer>
+
 
 </main>
 
