--- a/pricing/index.html
+++ b/pricing/index.html
@@ -162,6 +162,56 @@
       </article>
 
     </section>
+    <!-- ================================
+     PRICING CLARITY SECTION
+     Option 2 + 3 (Merged)
+================================ -->
+
+<section class="pricing-help">
+  <h3>Which plan is right for you?</h3>
+
+  <div class="pricing-help-grid">
+    <div class="pricing-help-card">
+      <h4>Basic – Best if</h4>
+      <ul>
+        <li>You are posting for the first time</li>
+        <li>You want short-term visibility</li>
+        <li>Your requirement is time-sensitive</li>
+      </ul>
+    </div>
+
+    <div class="pricing-help-card">
+      <h4>Premium – Best if</h4>
+      <ul>
+        <li>You want balanced visibility</li>
+        <li>Your property is in a normal-demand area</li>
+        <li>You want more time for genuine responses</li>
+      </ul>
+    </div>
+
+    <div class="pricing-help-card">
+      <h4>Pro – Best if</h4>
+      <ul>
+        <li>You want maximum visibility duration</li>
+        <li>Your property is premium or niche</li>
+        <li>You are comfortable waiting for the right tenant</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="pricing-notes">
+    <h4>Important before you select</h4>
+    <ul>
+      <li>Each plan allows you to post <strong>only one property</strong>.</li>
+      <li>Posting another property (even from the same phone) requires a new plan.</li>
+      <li>ARH Rentals is an information-access platform only.</li>
+      <li>We do not act as a broker or mediator.</li>
+      <li>We do not guarantee tenants, responses, or deal closure.</li>
+      <li>Your listing is automatically hidden after plan expiry.</li>
+    </ul>
+  </div>
+</section>
+
     <section class="notice pricing-next">
   <strong>Next step:</strong> Select a plan above, then continue to
   <a href="../post/index.html"><u>Post Property</u></a> (PIN + OTP).
