--- a/listings/index.html
+++ b/listings/index.html
@@ -106,6 +106,10 @@
               </div>
             </div>
             <button class="btn">Unlock Details</button>
+            <div class="small muted" style="margin-top:6px">
+  Contact details unlock will be available in a future update.
+</div>
+
           </div>
 
           <div class="listing" data-rent="18000">
@@ -119,6 +123,10 @@
               </div>
             </div>
             <button class="btn">Unlock Details</button>
+            <div class="small muted" style="margin-top:6px">
+  Contact details unlock will be available in a future update.
+</div>
+
           </div>
 
           <div class="listing" data-rent="6500">
@@ -132,6 +140,10 @@
               </div>
             </div>
             <button class="btn">Unlock Details</button>
+            <div class="small muted" style="margin-top:6px">
+  Contact details unlock will be available in a future update.
+</div>
+
           </div>
         </div>
 
