--- a/listings/index.html
+++ b/listings/index.html
@@ -53,45 +53,48 @@
 
   <div class="grid">
     <aside class="card">
-      <h2>Filters</h2>
-<div class="hr"></div>
+  <div class="card-body">
 
-<div class="small">City</div>
-<select class="input" id="fCity">
-  <option value="hisar">Hisar</option>
-</select>
+    <h2>Filters</h2>
+    <div class="hr"></div>
 
-<div style="height:10px"></div>
+    <div class="small">City</div>
+    <select class="input" id="fCity">
+      <option value="hisar">Hisar</option>
+    </select>
 
-<div class="small">Area / Sector</div>
-<input class="input" id="fArea" placeholder="e.g. Sector 14, Model Town"/>
+    <div style="height:10px"></div>
 
-<div style="height:10px"></div>
+    <div class="small">Area / Sector</div>
+    <input class="input" id="fArea" placeholder="e.g. Sector 14, Model Town"/>
 
-<div class="small">Property Type</div>
-<select class="input" id="fType">
-  <option value="">Any</option>
-  <option value="House">House</option>
-  <option value="Shop">Shop</option>
-  <option value="Office">Office</option>
-</select>
+    <div style="height:10px"></div>
 
-<div style="height:10px"></div>
+    <div class="small">Property Type</div>
+    <select class="input" id="fType">
+      <option value="">Any</option>
+      <option value="House">House</option>
+      <option value="Shop">Shop</option>
+      <option value="Office">Office</option>
+    </select>
 
-<div class="small">Max Rent (₹)</div>
-<input class="input" id="fMax" placeholder="e.g. 15000"/>
+    <div style="height:10px"></div>
 
-<div class="hr"></div>
+    <div class="small">Max Rent (₹)</div>
+    <input class="input" id="fMax" placeholder="e.g. 15000"/>
 
-<button class="btn btn-primary" type="button">
-  Search Properties
-</button>
+    <div class="hr"></div>
 
-<div class="small muted" style="margin-top:8px">
-  Filters are UI-ready. Live search will be enabled in a future update.
-</div>
+    <button class="btn btn-primary" type="button">
+      Search Properties
+    </button>
 
-    </aside>
+    <div class="small muted" style="margin-top:8px">
+      Filters are UI-ready. Live search will be enabled in a future update.
+    </div>
+
+  </div>
+</aside>
 
     <section class="card">
       <div class="card-body">
